<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ResetStatus" Id="{436965c6-8225-49b8-a356-2f47f4f1c665}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
{attribute 'to_string'}
TYPE ResetStatus :
(
	default := 0,
	bereit,
	ablaufAbbrechen,
	ausschalten,
	fertig,
	aktoren,
	kommunikationAbgebrochen
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>